<resources>
    <string name="app_name">AppVideojuegos</string>
    <string name="etEmail">Email</string>
    <string name="etContraseña">Password</string>
    <string name="botonLogin">Login</string>
    <string name="botonRegistro">Registro</string>
    <string name="etNombre">Nombre</string>
    <string name="textViewLogin">Escriba la contraseña de nuevo para confirmación</string>
    <string name="botonLogin2">Crear</string>
    <string name="validacionMain">Rellene los campos</string>
</resources>
