<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/etNombre" />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_below="@id/etNombre"
            android:hint="@string/etEmail"/>

        <EditText
            android:id="@+id/etContraseñaLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_below="@id/etEmailLogin"
            android:hint="@string/etContraseña"/>

        <EditText
            android:id="@+id/etContraseñaLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/textViewLogin"
            android:layout_below="@id/etContraseñaLogin"/>

        <Button
            android:id="@+id/botonLogin2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonLogin2"
            android:background="@color/green_600"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>