<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etEmail"
            android:layout_above="@id/etContraseña"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/botonLogin"
            android:layout_marginTop="-4dp"

            android:layout_centerVertical="true"
            android:ems="10"
            android:hint="@string/etContraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/botonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="-1dp"
            android:background="@color/green_600"
            android:textColor="@color/white"
            android:text="@string/botonLogin" />

        <Button
            android:id="@+id/botonRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="0dp"
            android:background="@color/orange_600"
            android:textColor="@color/white"
            android:text="@string/botonRegistro" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>